--- a/application/hci_rpmsg/CMakeLists.txt
+++ b/application/hci_rpmsg/CMakeLists.txt
@@ -5,4 +5,5 @@ cmake_minimum_required(VERSION 3.13.1)
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 project(hci_rpmsg)
 
+include(debugger.cmake)
 target_sources(app PRIVATE src/main.c)
