1> 修复了Kconfig 配置错误

--- a/rootkit/CMakeLists.txt
+++ b/rootkit/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-add_subdirectory(components)
-add_subdirectory(drivers)
-add_subdirectory(drivers_ext)
-add_subdirectory(subsys)
+add_subdirectory_ifdef(CONFIG_USER_SUBSYSTEM     subsys)
+add_subdirectory_ifdef(CONFIG_USER_DEVICE_DRIVER drivers)
+add_subdirectory_ifdef(CONFIG_USER_DEVICE_DRIVER drivers_ext)
+add_subdirectory_ifdef(CONFIG_USER_LIBRARIES     lib)
