--- a/rootkit/lib/Kconfig
+++ b/rootkit/lib/Kconfig
@@ -19,7 +19,6 @@ rsource "stp/Kconfig"
 rsource "protobuf-c/Kconfig"
 rsource "services/Kconfig"
 rsource "cm_backtrace/Kconfig"
-rsource "ble/Kconfig"
 rsource "rpmsg_hci/Kconfig"
 
 rsource "agps/Kconfig"
@@ -51,5 +50,5 @@ rsource "hw_unique_key/Kconfig"
 rsource "pelion/Kconfig"
 rsource "modem_jwt/Kconfig"
 rsource "modem_attest_token/Kconfig"
-rsource "multicell_location/Kconfig"
+#rsource "multicell_location/Kconfig"
 endmenu
