--- a/rootkit/lib/fatal_error/Kconfig
+++ b/rootkit/lib/fatal_error/Kconfig
@@ -4,18 +4,18 @@
 # SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
 #
 
-menuconfig RESET_ON_FATAL_ERROR
-	bool "Reset on fatal error"
-	default y if !DEBUG && !BOARD_NATIVE_POSIX && !QEMU_TARGET && !ZTEST
-	select REBOOT
-	help
-	  Enable using the fatal error handler defined for Nordic DKs.
-	  When it is used, the system restarts after a fatal error.
+# menuconfig RESET_ON_FATAL_ERROR
+# 	bool "Reset on fatal error"
+# 	default y if !DEBUG && !BOARD_NATIVE_POSIX && !QEMU_TARGET && !ZTEST
+# 	select REBOOT
+# 	help
+# 	  Enable using the fatal error handler defined for Nordic DKs.
+# 	  When it is used, the system restarts after a fatal error.
 
-if RESET_ON_FATAL_ERROR
+# if RESET_ON_FATAL_ERROR
 
-module = FATAL_ERROR
-module-str = Fatal error
-source "${ZEPHYR_BASE}/subsys/logging/Kconfig.template.log_config"
+# module = FATAL_ERROR
+# module-str = Fatal error
+# source "${ZEPHYR_BASE}/subsys/logging/Kconfig.template.log_config"
 
-endif # RESET_ON_FATAL_ERROR
+# endif # RESET_ON_FATAL_ERROR
