--- a/rootkit/CMakeLists.txt
+++ b/rootkit/CMakeLists.txt
@@ -1,4 +1,6 @@
 
+zephyr_include_directories(include)
+
 add_subdirectory_ifdef(CONFIG_USER_SUBSYSTEM     subsys)
 add_subdirectory_ifdef(CONFIG_USER_DEVICE_DRIVER drivers)
 add_subdirectory_ifdef(CONFIG_USER_DEVICE_DRIVER drivers_ext)
