--- a/application/hci_rpmsg/CMakeLists.txt
+++ b/application/hci_rpmsg/CMakeLists.txt
@@ -7,5 +7,5 @@ project(hci_rpmsg)
 
 include(debugger.cmake)
 target_sources(app PRIVATE 
-    src/main.c
-    src/remote_rpmsg_hci.c)
+    src/main.c)
+
