--- a/application/peripheral_hr/CMakeLists.txt
+++ b/application/peripheral_hr/CMakeLists.txt
@@ -2,7 +2,7 @@
 
 cmake_minimum_required(VERSION 3.13.1)
 
-#include(../cmake/modules.cmake)
+include(../cmake/modules.cmake)
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 project(peripheral_hr)
 
