--- a/rootkit/subsys/CMakeLists.txt
+++ b/rootkit/subsys/CMakeLists.txt
@@ -4,6 +4,7 @@
 # SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
 #
 
+add_subdirectory_ifdef(CONFIG_BDBUF blkdev)
 add_subdirectory_ifdef(CONFIG_BT bluetooth)
 
 
@@ -43,7 +44,6 @@ add_subdirectory_ifdef(CONFIG_FW_INFO	fw_info)
 add_subdirectory_ifdef(CONFIG_SHELL_BT_NUS	shell)
 
 add_subdirectory(debug)
-add_subdirectory(partition_manager)
 
 add_subdirectory_ifdef(CONFIG_NRF_RPC nrf_rpc)
 add_subdirectory_ifdef(CONFIG_NRF_802154_RADIO_DRIVER ieee802154)
