Updated configuration for nrf53xx

--- a/application/appcore/CMakeLists.txt
+++ b/application/appcore/CMakeLists.txt
@@ -6,7 +6,7 @@ include(../cmake/modules.cmake)
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 project(peripheral_hr)
 
-include(debugger.cmake)
+include(../cmake/debugger.cmake)
 
 FILE(GLOB app_sources src/*.c)
 target_sources(app PRIVATE
