--- a/rootkit/CMakeLists.txt
+++ b/rootkit/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory_ifdef(CONFIG_USER_SUBSYSTEM     subsys)
 add_subdirectory_ifdef(CONFIG_USER_DEVICE_DRIVER drivers)
 add_subdirectory_ifdef(CONFIG_USER_DEVICE_DRIVER drivers_ext)
 add_subdirectory_ifdef(CONFIG_USER_LIBRARIES     lib)
+add_subdirectory_ifdef(CONFIG_USER_SYSTEM_INIT   init)
