--- a/rootkit/drivers/gps/Kconfig
+++ b/rootkit/drivers/gps/Kconfig
@@ -5,9 +5,13 @@
 # SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
 #
 
-menu "GPS Drivers"
+menuconfig GPS
+    bool "GPS Drivers"
+    help
+      GPS drivers
 
-rsource "gps_sim/Kconfig"
-rsource "nrf9160_gps/Kconfig"
+if GPS
+    rsource "gps_sim/Kconfig"
+    rsource "nrf9160_gps/Kconfig"
+endif
 
-endmenu
