--- a/application/appcore/boards/nrf5340dk_nrf5340_cpuapp.conf
+++ b/application/appcore/boards/nrf5340dk_nrf5340_cpuapp.conf
@@ -35,6 +35,8 @@ CONFIG_FPU_SHARING=y
 CONFIG_BT=y
 CONFIG_BT_HCI=y
 
+CONFIG_BT_DEVICE_NAME_DYNAMIC=y
+CONFIG_BT_DEVICE_NAME_MAX=32
 CONFIG_BT_DEVICE_NAME="NordicBLE"
 CONFIG_BT_COMPANY_ID=0x05F1
 
@@ -58,36 +60,50 @@ CONFIG_BT_GAP_AUTO_UPDATE_CONN_PARAMS=y
 CONFIG_BT_GAP_PERIPHERAL_PREF_PARAMS=y
 CONFIG_BT_PERIPHERAL_PREF_MIN_INT=24
 CONFIG_BT_PERIPHERAL_PREF_MAX_INT=40
-CONFIG_BT_PERIPHERAL_PREF_SLAVE_LATENCY=0
+CONFIG_BT_PERIPHERAL_PREF_LATENCY=0
 CONFIG_BT_PERIPHERAL_PREF_TIMEOUT=42
 
 CONFIG_BT_HCI_VS=y
 CONFIG_BT_HCI_VS_EXT=y
-
+CONFIG_BT_RX_STACK_SIZE=2048
 CONFIG_BT_SHELL=y
 
 # USB
 CONFIG_USB_DEVICE_STACK=y
 CONFIG_USB_MASS_STORAGE=y
+CONFIG_MASS_STORAGE_DISK_NAME="NAND"
 CONFIG_USB_DEVICE_MANUFACTURER="Nordic"
+CONFIG_MASS_STORAGE_INQ_VENDOR_ID="Norflash"
+CONFIG_MASS_STORAGE_INQ_PRODUCT_ID="USB-Disk        "
 
 #Flash map
 CONFIG_FLASH_MAP=y
 
 # Filesystem
 CONFIG_FILE_SYSTEM=y
+CONFIG_FILE_SYSTEM_SHELL=y
+
 # Little fs
-CONFIG_FILE_SYSTEM_LITTLEFS=y
-CONFIG_FS_LITTLEFS_NUM_FILES=4
-CONFIG_FS_LITTLEFS_NUM_DIRS=4
-CONFIG_FS_LITTLEFS_READ_SIZE=512
-CONFIG_FS_LITTLEFS_PROG_SIZE=512
-CONFIG_FS_LITTLEFS_CACHE_SIZE=4096
-CONFIG_FS_LITTLEFS_LOOKAHEAD_SIZE=128
+# CONFIG_FILE_SYSTEM_LITTLEFS=y
+# CONFIG_FS_LITTLEFS_NUM_FILES=4
+# CONFIG_FS_LITTLEFS_NUM_DIRS=4
+# CONFIG_FS_LITTLEFS_READ_SIZE=512
+# CONFIG_FS_LITTLEFS_PROG_SIZE=512
+# CONFIG_FS_LITTLEFS_CACHE_SIZE=4096
+# CONFIG_FS_LITTLEFS_LOOKAHEAD_SIZE=128
+
+# Fat
+CONFIG_FAT_FILESYSTEM_ELM=y
+CONFIG_FS_FATFS_EXFAT=y
+CONFIG_FS_FATFS_NUM_FILES=4
+CONFIG_FS_FATFS_NUM_DIRS=4
+CONFIG_FS_FATFS_LFN=y
+CONFIG_FS_FATFS_LFN_MODE_HEAP=y
+
 
 # Shell
 CONFIG_SHELL=y
-CONFIG_UART_SHELL_ON_DEV_NAME="UART_0"
+#CONFIG_UART_SHELL_ON_DEV_NAME="UART_0"
 
 # System monitor
 CONFIG_THREAD_ANALYZER=y
@@ -105,6 +121,17 @@ CONFIG_FLASH=y
 #CONFIG_FLASH_HAS_PAGE_LAYOUT=y
 CONFIG_NORDIC_QSPI_NOR=y
 CONFIG_NORDIC_QSPI_NOR_FLASH_LAYOUT_PAGE_SIZE=4096
+
+# Disk driver for flash
+CONFIG_DISK_DRIVER_FLASH=y
+CONFIG_DISK_FLASH_VOLUME_NAME="NAND"
+CONFIG_DISK_FLASH_DEV_NAME="MX25R64"
+CONFIG_DISK_FLASH_START=0x0
+CONFIG_DISK_FLASH_MAX_RW_SIZE=512
+CONFIG_DISK_FLASH_ERASE_ALIGNMENT=0x1000
+CONFIG_DISK_ERASE_BLOCK_SIZE=0x1000
+CONFIG_DISK_FLASH_SECTOR_SIZE=512
+CONFIG_DISK_VOLUME_SIZE=0x800000
 
 # BT
 CONFIG_BT_RPMSG=y
@@ -125,7 +152,7 @@ CONFIG_PWM_NRFX=y
 CONFIG_PWM_SHELL=y
 
 # USB
-CONFIG_USB=y
+CONFIG_USB_DEVICE_DRIVER=y
 CONFIG_USB_NRFX=y
 
 # Kscan
