--- a/application/appcore/prj.conf
+++ b/application/appcore/prj.conf
@@ -8,3 +8,9 @@ CONFIG_BT_BAS=y
 CONFIG_BT_HRS=y
 CONFIG_BT_DEVICE_NAME="ZephyrBLE"
 CONFIG_BT_DEVICE_APPEARANCE=833
+
+CONFIG_USER_LIBRARIES=y
+CONFIG_CORTEXM_BACKTRACE=y
+
+CONFIG_LOG=y
+CONFIG_LOG_BACKEND_UART=y
