--- a/application/appcore/component/CMakeLists.txt
+++ b/application/appcore/component/CMakeLists.txt
@@ -1,5 +1,8 @@
 # Application Components
-zephyr_library_named(component)
+static_library(component)
 
-zephyr_library_sources(${ZEPHYR_BASE}/misc/empty_file.c)
+target_sources(component 
+    PRIVATE
+    ${ZEPHYR_BASE}/misc/empty_file.c
+)
 add_subdirectory_ifdef(CONFIG_BT bt)
