--- a/application/appcore/component/bt/CMakeLists.txt
+++ b/application/appcore/component/bt/CMakeLists.txt
@@ -1,4 +1,5 @@
 
-zephyr_library_sources( 
-    bthost_init.c
+target_sources(component
+    PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}/bthost_init.c
 )
