--- a/application/appcore/boards/nrf5340dk_nrf5340_cpuapp.conf
+++ b/application/appcore/boards/nrf5340dk_nrf5340_cpuapp.conf
@@ -66,10 +66,12 @@ CONFIG_BT_PERIPHERAL_PREF_TIMEOUT=42
 CONFIG_BT_HCI_VS=y
 CONFIG_BT_HCI_VS_EXT=y
 CONFIG_BT_RX_STACK_SIZE=2048
-CONFIG_BT_SHELL=y
+#CONFIG_BT_SHELL=y
 
 # USB
 CONFIG_USB_DEVICE_STACK=y
+CONFIG_USB_MAX_NUM_TRANSFERS=8
+CONFIG_USB_REQUEST_BUFFER_SIZE=512
 CONFIG_USB_MASS_STORAGE=y
 CONFIG_MASS_STORAGE_DISK_NAME="NAND"
 CONFIG_USB_DEVICE_MANUFACTURER="Nordic"
