--- a/application/appcore/boards/nrf5340dk_nrf5340_cpuapp.conf
+++ b/application/appcore/boards/nrf5340dk_nrf5340_cpuapp.conf
@@ -180,8 +180,7 @@ CONFIG_DEBUG_OPTIMIZATIONS=y
 #=========================
 
 # Drivers
-CONFIG_USER_DEVICE_DRIVER=y
-CONFIG_GPIO_KEYS=y
+#CONFIG_GPIO_KEYS=y
 
 # Lib
 CONFIG_CORTEXM_BACKTRACE=y
