--- a/application/watch/boards/iwatchv0.conf
+++ b/application/watch/boards/iwatchv0.conf
@@ -4,11 +4,11 @@ CONFIG_KSCAN_CYTTSP5=y
 CONFIG_TOUCH_CYTTSP5=n
 
 #it is neccesary for CONFIG_MSPI_APOLLO3P......
-CONFIG_APOLLO3P_DEVICE=y
+# CONFIG_APOLLO3P_DEVICE=y
 CONFIG_MISC=y
 
 #Montion
-CONFIG_MOTION=y
+# CONFIG_MOTION=y
 
 
 #SPI NOR FLASH MX25U256
@@ -25,8 +25,8 @@ CONFIG_FLASH_PAGE_LAYOUT=y
 # iwatchv0 have nor flash, setting use it!
 CONFIG_SETTINGS=y
 CONFIG_SETTINGS_CUSTOM=y
-CONFIG_NVS_CUSTOM=y
-CONFIG_SETTING_USE_NVS_CUSTOM=y
+# CONFIG_NVS_CUSTOM=y
+# CONFIG_SETTING_USE_NVS_CUSTOM=y
 
 #GUIX
 CONFIG_GUIX_MEMPOOL_SIZE=10240
@@ -44,23 +44,23 @@ CONFIG_GUI_APP=y
 CONFIG_POSIX_CLOCK=y
 
 #RTC DRV
-CONFIG_APOLLO3P_DEVICE_PRIVATE=y
-CONFIG_COUNTER_EXTRA=y
-CONFIG_COUNTER_RTC_APOLLO3P=y
+# CONFIG_APOLLO3P_DEVICE_PRIVATE=y
+# CONFIG_COUNTER_EXTRA=y
+# CONFIG_COUNTER_RTC_APOLLO3P=y
 
 CONFIG_NEWLIB_LIBC=y
 CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
 CONFIG_FPU=y
 CONFIG_FPU_SHARING=y
-CONFIG_FP_HARDABI=y
+# CONFIG_FP_HARDABI=y
 CONFIG_SENSOR=y
-CONFIG_MOTION=y
-CONFIG_GH3011=y
+# CONFIG_MOTION=y
+# CONFIG_GH3011=y
 #CONFIG_PAH8112=y
 
 #Services
-CONFIG_SERVICE=y
-CONFIG_MAGNET_SVR=y
+# CONFIG_SERVICE=y
+# CONFIG_MAGNET_SVR=y
 
 CONFIG_EXTRA_EXCEPTION_INFO=y
 
