--- a/application/watch/prj.conf
+++ b/application/watch/prj.conf
@@ -16,7 +16,7 @@ CONFIG_THREAD_RUNTIME_STATS=y
 
 #CONFIG_USERSPACE=y
 #
-CONFIG_STP=y
+# CONFIG_STP=y
 
 # System initialize priority
 CONFIG_SENSOR_INIT_PRIORITY=80
