1> 修复了iwatchv0 + v2.7.0编译问题

--- a/application/watch/boards/iwatchv0.conf
+++ b/application/watch/boards/iwatchv0.conf
@@ -25,6 +25,8 @@ CONFIG_FLASH_PAGE_LAYOUT=y
 # iwatchv0 have nor flash, setting use it!
 CONFIG_SETTINGS=y
 CONFIG_SETTINGS_CUSTOM=y
+CONFIG_SETTINGS_NVS=y
+CONFIG_NVS=y
 # CONFIG_NVS_CUSTOM=y
 # CONFIG_SETTING_USE_NVS_CUSTOM=y
 
