--- a/rootkit/boards/arm/ama3b2evb/ama3b2evb_defconfig
+++ b/rootkit/boards/arm/ama3b2evb/ama3b2evb_defconfig
@@ -42,12 +42,12 @@ CONFIG_DYNAMIC_INTERRUPTS=y
 #CONFIG_GUIX_USER_MODE=y
 
 # Device driver
-CONFIG_APOLLO3P_DEVICE=y
+#CONFIG_APOLLO3P_DEVICE=y
 CONFIG_SERIAL=y
 CONFIG_UART_APOLLO3P=y
 CONFIG_CONSOLE=y
 CONFIG_UART_CONSOLE=y
-CONFIG_UART_CONSOLE_ON_DEV_NAME="UART_0"
+#CONFIG_UART_CONSOLE_ON_DEV_NAME="UART_0"
 CONFIG_TIMER=y
 
 CONFIG_GPIO=y
@@ -81,7 +81,7 @@ CONFIG_SPI=y
 
 # Subsystem
 CONFIG_SHELL=y
-CONFIG_UART_SHELL_ON_DEV_NAME="UART_0"
+#CONFIG_UART_SHELL_ON_DEV_NAME="UART_0"
 CONFIG_LOG=y
 
 
@@ -97,8 +97,8 @@ CONFIG_BT_DIS=y
 CONFIG_BT_SMP=y
 CONFIG_BT_ECC=y
 
-CONFIG_BT_RX_BUF_COUNT=16
-CONFIG_BT_RX_BUF_LEN=320
+#CONFIG_BT_RX_BUF_COUNT=16
+#CONFIG_BT_RX_BUF_LEN=320
 CONFIG_BT_HCI_TX_STACK_SIZE=2048
 CONFIG_BT_HCI_TX_STACK_SIZE_WITH_PROMPT=y
 
@@ -107,7 +107,7 @@ CONFIG_BT_DEVICE_APPEARANCE=833
 
 CONFIG_BT_L2CAP_TX_BUF_COUNT=6
 CONFIG_BT_L2CAP_TX_FRAG_COUNT=4
-CONFIG_BT_L2CAP_RX_MTU=320
+#CONFIG_BT_L2CAP_RX_MTU=320
 CONFIG_BT_L2CAP_TX_MTU=320
 
 CONFIG_BT_GATT_CLIENT=y
@@ -136,12 +136,12 @@ CONFIG_THREAD_MAX_NAME_LEN=32
 # Work Queue Options
 CONFIG_SYSTEM_WORKQUEUE_PRIORITY=-1
 
-CONFIG_TICKLESS_IDLE=y
+#CONFIG_TICKLESS_IDLE=y
 #CONFIG_TICKLESS_IDLE_THRESH=3
 CONFIG_TICKLESS_KERNEL=y
 
 #Power Manage
 CONFIG_PM=y
 CONFIG_PM_POLICY_RESIDENCY=y
-CONFIG_PM_DEVICE_IDLE=y
+#CONFIG_PM_DEVICE_IDLE=y
 
