1> 修复了netcore编译问题

--- a/rootkit/drivers/zephyr/bluetooth/Kconfig
+++ b/rootkit/drivers/zephyr/bluetooth/Kconfig
@@ -1,49 +1,4 @@
 
-choice BT_HCI_BUS_TYPE
-  prompt "Bluetooth HCI driver"
-  default BT_APOLLO3P
-  
-config BT_APOLLO3P
-  bool "apollo3p hci driver"
-  help
-    Apollo3p Bluetooth HCI driver for communication with another CPU
-endchoice
-
-if BT_APOLLO3P
-#menu "apollo3p hci driver config"
-
-config BT_DRIVER_RX_PRIO
-  int "BT driver rx-thread priority"
-  default 7
-
-config HCI_DRIVER_STACK_SIZE
-  int "HCI driver thread stack size"
-  default 4096
-    
-config BT_HCI_DEBUG
-  bool "Enable HCI driver debug infomation"
-  default n
-
-config BT_HCI_STAT
-  bool "Enable HCI driver statistics information"
-  default y
-  
-config HCI_SET_MAC_ADDR
-  bool "HCI set mac address"
-  default y
-  help
-    Address format: xx-xx-xx-0x03-0x02-0x01
-
-config BLE_TX_OUTPUT_POWER
-  hex "TX power level for BLE Core"
-  range 0x3 0x0F
-  default 0x08
-  help
-    Set TX power level for BLE core
-    0x03: -20dBm
-    0x04: -10dBm
-    0x05: -5dBm
-    0x08: 0dBm
-    0x0F: 4dBm
-    
+if SOC_APOLLO3P 
+rsource "Kconfig.apollo3p"
 endif
