--- a/application/netcore/prj.conf
+++ b/application/netcore/prj.conf
@@ -20,3 +20,8 @@ CONFIG_LOG=y
 CONFIG_ASSERT=y
 CONFIG_DEBUG_INFO=y
 CONFIG_EXCEPTION_STACK_TRACE=y
+
+#User library
+CONFIG_USER_LIBRARIES=y
+CONFIG_RPMSG_HCI_REMOTE=y
+
