1> 块设备组件编译ok

--- a/rootkit/subsys/blkdev/CMakeLists.txt
+++ b/rootkit/subsys/blkdev/CMakeLists.txt
@@ -4,6 +4,6 @@ zephyr_library_named(bdbuf)
 zephyr_library_sources(
     bdbuf.c
     blkdev.c
-    blkddev_flash.c
+    blkdev_flash.c
     diskdevs-init.c
 )
