--- a/application/appcore/boards/nrf5340dk_nrf5340_cpuapp.conf
+++ b/application/appcore/boards/nrf5340dk_nrf5340_cpuapp.conf
@@ -187,3 +187,7 @@ CONFIG_CORTEXM_BACKTRACE=y
 
 CONFIG_USER_SYSTEM_INIT=y
 CONFIG_USER_FS_MOUNT=y
+
+# Subsystem
+CONFIG_USER_SUBSYSTEM=y
+CONFIG_BDBUF=y
