--- a/application/appcore/prj.conf
+++ b/application/appcore/prj.conf
@@ -14,3 +14,7 @@ CONFIG_CORTEXM_BACKTRACE=y
 
 CONFIG_LOG=y
 CONFIG_LOG_BACKEND_UART=y
+
+CONFIG_CACHE_MANAGEMENT=y
+CONFIG_DCACHE_LINE_SIZE=32
+CONFIG_ICACHE_LINE_SIZE=32
