--- a/application/appcore/CMakeLists.txt
+++ b/application/appcore/CMakeLists.txt
@@ -16,11 +16,11 @@ include(../cmake/debugger.cmake)
 #=======================
 zephyr_include_directories(.)
 
-
 #===========================
 # Subdirectories and target
 #===========================
 add_subdirectory(component)
+add_subdirectory(debugger)
 target_sources(app PRIVATE
   src/main.c
 )
