--- a/application/appcore/prj.conf
+++ b/application/appcore/prj.conf
@@ -18,3 +18,5 @@ CONFIG_LOG_BACKEND_UART=y
 CONFIG_CACHE_MANAGEMENT=y
 CONFIG_DCACHE_LINE_SIZE=32
 CONFIG_ICACHE_LINE_SIZE=32
+
+CONFIG_HEAP_MEM_POOL_SIZE=65536
