Updated debugger component

--- a/rootkit/CMakeLists.txt
+++ b/rootkit/CMakeLists.txt
@@ -9,3 +9,4 @@ add_subdirectory_ifdef(CONFIG_USER_SUBSYSTEM     subsys)
 add_subdirectory_ifdef(CONFIG_USER_LIBRARIES     lib)
 add_subdirectory_ifdef(CONFIG_USER_SYSTEM_INIT   init)
 add_subdirectory_ifdef(CONFIG_GUIX               gui)
+add_subdirectory_ifdef(CONFIG_CORTEXM_DEBUGGER   debugger)
