--- a/rootkit/gui/Kconfig
+++ b/rootkit/gui/Kconfig
@@ -1,4 +1,9 @@
 # Device driver configure menu
+menuconfig GUIX
+	bool "GUIX for zephyr"
+	help
+	  Enable options for GUIX.
+if GUIX
 
 choice GUIX_ADAPT_IMPL
 prompt "GUIX for zephyr adapt layout"
@@ -48,3 +53,4 @@ config RGB565_SWAP_BYTEORDER
 config GUIX_DISABLE_ERROR_CHECKING
 	bool "Don't check input paramters for GUI API so that improve speed"
 	
+endif #GUIX
