--- a/rootkit/Kconfig
+++ b/rootkit/Kconfig
@@ -1,39 +1,7 @@
 # RootKit configurations 
 
-#Subsystem
-menuconfig  USER_SUBSYSTEM
-  bool "Subsystem (out of sourcetree))"
-  help
-    User extension for zephyr subsystem
-
-if USER_SUBSYSTEM
 rsource "subsys/Kconfig"
-endif 
-
-#Libraries
-menuconfig  USER_LIBRARIES
-  bool "Libraries (out of sourcetree)"
-  help
-    User extension for zephyr libraries
-
-if USER_LIBRARIES
 rsource "lib/Kconfig"
-endif 
-
-#Initialization
-menuconfig  USER_SYSTEM_INIT
-  bool "User component initialize"
-
-if USER_SYSTEM_INIT
 rsource "init/Kconfig"
-endif
-
-menuconfig GUIX
-	bool "GUIX for zephyr"
-	help
-	  Enable options for GUIX.
-if GUIX
-  rsource "gui/Kconfig"
-endif
-
-
+rsource "gui/Kconfig"
+rsource "debugger/Kconfig"
