--- a/rootkit/base/CMakeLists.txt
+++ b/rootkit/base/CMakeLists.txt
@@ -1,12 +1,10 @@
-# Components
+# Base Components
 
 zephyr_sources(
   observer.c
-  system_fatal.c
+  fatal.c
 )
 
-# zephyr_sources_ifdef(CONFIG_GUIX  mac_addr.c)
 zephyr_sources_ifdef(CONFIG_GUIX  evmgr.c)
 zephyr_sources_ifdef(CONFIG_GUIX  ev_shell.c)
-
-zephyr_linker_sources(SECTIONS base.ld)
+zephyr_linker_sources(SECTIONS    base.ld)
