--- a/rootkit/subsys/Kconfig
+++ b/rootkit/subsys/Kconfig
@@ -1,37 +1,26 @@
+menuconfig  USER_SUBSYSTEM
+  bool "Subsystem (out of sourcetree))"
+  help
+    User extension for zephyr subsystem
+
+if USER_SUBSYSTEM
 rsource "blkdev/Kconfig"
-
 rsource "bluetooth/Kconfig"
-
 rsource "dfu/Kconfig"
-
 rsource "esb/Kconfig"
-
 rsource "pcd/Kconfig"
-
 rsource "net/Kconfig"
-
 rsource "nfc/Kconfig"
-
 rsource "event_manager/Kconfig"
-
 rsource "profiler/Kconfig"
-
 rsource "spm/Kconfig"
-
 rsource "fw_info/Kconfig"
-
 rsource "debug/Kconfig"
-
 rsource "shell/Kconfig"
-
 # rsource "mpsl/Kconfig"
-
 rsource "nrf_rpc/Kconfig"
-
 rsource "zigbee/Kconfig"
-
 rsource "mgmt/fmfu/Kconfig"
-
 rsource "caf/Kconfig"
-
 rsource "ieee802154/Kconfig"
+endif #USER_SUBSYSTEM
