--- a/application/appcore/CMakeLists.txt
+++ b/application/appcore/CMakeLists.txt
@@ -22,6 +22,7 @@ zephyr_include_directories(.)
 add_subdirectory(component)
 target_sources(app PRIVATE
   src/main.c
+  src/apple_ancs.c
 )
 collect_link_libraries(applibs app)
 target_link_libraries(app PUBLIC ${applibs})
