--- a/application/appcore/boards/nrf5340dk_nrf5340_cpuapp.conf
+++ b/application/appcore/boards/nrf5340dk_nrf5340_cpuapp.conf
@@ -36,6 +36,9 @@ CONFIG_BT_SHELL=y
 CONFIG_BT=y
 CONFIG_BT_HCI=y
 
+CONFIG_BT_BUF_ACL_TX_SIZE=251
+CONFIG_BT_BUF_ACL_RX_SIZE=512
+
 CONFIG_BT_DEVICE_NAME_DYNAMIC=y
 CONFIG_BT_DEVICE_NAME_MAX=32
 CONFIG_BT_DEVICE_NAME="NordicBLE"
@@ -66,7 +69,8 @@ CONFIG_BT_PERIPHERAL_PREF_TIMEOUT=42
 
 CONFIG_BT_HCI_VS=y
 CONFIG_BT_HCI_VS_EXT=y
-CONFIG_BT_RX_STACK_SIZE=2048
+CONFIG_BT_RX_STACK_SIZE=4096
+CONFIG_BT_SETTINGS=y
 #CONFIG_BT_SHELL=y
 
 # USB
