--- a/application/appcore/prj.conf
+++ b/application/appcore/prj.conf
@@ -9,6 +9,13 @@ CONFIG_BT_HRS=y
 CONFIG_BT_DEVICE_NAME="ZephyrBLE"
 CONFIG_BT_DEVICE_APPEARANCE=833
 
+#Filesystem 
+CONFIG_NVS=y
+
+#Settings
+CONFIG_SETTINGS=y
+CONFIG_SETTINGS_NVS=y
+
 CONFIG_USER_LIBRARIES=y
 CONFIG_CORTEXM_DEBUGGER=y
 
@@ -20,3 +27,10 @@ CONFIG_DCACHE_LINE_SIZE=32
 CONFIG_ICACHE_LINE_SIZE=32
 
 CONFIG_HEAP_MEM_POOL_SIZE=65536
+
+#RootKit
+CONFIG_BT_ANCS_CLIENT=y
+CONFIG_BT_ANCS_CLIENT_CP_BUFF_SIZE=256
+CONFIG_BT_GATT_DM=y
+CONFIG_BT_AMS_CLIENT=y
+CONFIG_BT_GATTP=y
