--- a/application/appcore/prj.conf
+++ b/application/appcore/prj.conf
@@ -28,6 +28,9 @@ CONFIG_ICACHE_LINE_SIZE=32
 
 CONFIG_HEAP_MEM_POOL_SIZE=65536
 
+# Debug
+CONFIG_ASSERT=y
+
 #RootKit
 CONFIG_BT_ANCS_CLIENT=y
 CONFIG_BT_ANCS_CLIENT_CP_BUFF_SIZE=256
