--- a/rootkit/subsys/shell/CMakeLists.txt
+++ b/rootkit/subsys/shell/CMakeLists.txt
@@ -4,4 +4,5 @@
 # SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
 #
 
-zephyr_sources(shell_bt_nus.c)
+zephyr_sources_ifdef(CONFIG_SHELL_BT_NUS shell_bt_nus.c)
+zephyr_sources_ifdef(CONFIG_SHELL_DBG shell_dbg.c)
